--- a/bootcamp/day 02/exercises/Fabio/answer.ipynb
+++ b/bootcamp/day 02/exercises/Fabio/answer.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5e02f661",
    "metadata": {},
    "source": [
     "# Aspectos Nativos de Python - Parte 1"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "539369e5",
    "metadata": {},
    "source": [
     "## Investigue e comente o output dos códigos abaixo, antes de rodar as células:"
@@ -19,7 +17,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec74e961",
    "metadata": {
     "scrolled": false
    },
@@ -31,7 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25b08043",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +38,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38e2d229",
    "metadata": {
     "scrolled": false
    },
@@ -54,7 +49,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8408bccd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +59,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9e071a5",
    "metadata": {
     "scrolled": true
    },
@@ -77,7 +70,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9044d353",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +80,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "352481b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +99,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f2eefb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +114,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41d07ff3",
    "metadata": {
     "scrolled": true
    },
@@ -139,7 +128,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e38f8866",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +141,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e824320b",
    "metadata": {
     "scrolled": true
    },
@@ -168,7 +155,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9adb262d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +169,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffec4ebc",
    "metadata": {},
    "source": [
     "## *For* e *while*"
@@ -191,7 +176,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbcbc257",
    "metadata": {},
    "source": [
     "Crie código que retorne todos os números de 1 e 100 divisíveis por 7 usando *for loop* e, em seguida, com *while*."
@@ -200,7 +184,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a18d6c89",
    "metadata": {
     "scrolled": false
    },
@@ -214,7 +197,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2963d08",
    "metadata": {
     "scrolled": true
    },
@@ -229,30 +211,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6773508b",
    "metadata": {},
    "source": [
-    "Crie um código que reproduza o padrão de números a seguir (ignore os caracteres #).  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "dafc397d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 5 4 3 2 1 0 \n",
-    "# 4 3 2 1 0 \n",
-    "# 3 2 1 0\n",
-    "# 2 1 0\n",
-    "# 1 0\n",
-    "# 0"
+    "Crie um código que reproduza o padrão de números a seguir.  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5f24bc24",
+   "metadata": {},
+   "source": [
+    "5 4 3 2 1 0 <br>\n",
+    "4 3 2 1 0 <br>\n",
+    "3 2 1 0 <br>\n",
+    "2 1 0 <br>\n",
+    "1 0 <br>\n",
+    "0 <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "*dica*: lembre-se que você pode usar um *for loop* dentro de um *for loop*. \n",
@@ -263,7 +240,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05ee25d7",
    "metadata": {
     "scrolled": true
    },
@@ -277,7 +253,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4901f832",
    "metadata": {},
    "source": [
     "## Explorando as estatísticas brasileiras de comércio exterior"
@@ -285,7 +260,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5c54090",
    "metadata": {},
    "source": [
     "A ferramenta ComexStat (http://comexstat.mdic.gov.br/pt/geral) permite a criação de consultas aos dados de comércio exterior em diversos níveis de detalhamento. Podemos, por exemplo, checar rapidamente os principais destinos das exportações brasileiras."
@@ -294,7 +268,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d2f33ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +278,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "301e494d",
    "metadata": {},
    "source": [
     "Vamos escrever um ranking dos principais destinos das exportações brasileiras em 2022. Crie um código que retorne, para cada país da lista, a expressão \"[posição] lugar: [país] - US$ [valor] bilhões\", usando uma casa decimal. \n",
@@ -316,7 +288,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc7b3629",
    "metadata": {
     "scrolled": true
    },
@@ -329,7 +300,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
