--- a/bootcamp/day 02/exercises/Fabio/answer.ipynb
+++ b/bootcamp/day 02/exercises/Fabio/answer.ipynb
@@ -282,7 +282,7 @@
    "source": [
     "Vamos escrever um ranking dos principais destinos das exportações brasileiras em 2022. Crie um código que retorne, para cada país da lista, a expressão \"[posição] lugar: [país] - US$ [valor] bilhões\", usando uma casa decimal. \n",
     "\n",
-    "Exemplo: \"1º lugar: China - US$ 89,4 bilhões\"."
+    "Exemplo: \"1º lugar: China - US$ 89.4 bilhões\"."
    ]
   },
   {
@@ -294,7 +294,7 @@
    "outputs": [],
    "source": [
     "for i in range(len(paises_destino)):\n",
-    "    print(f\"{i + 1}º lugar: {paises_destino[i]} - US$\", f\"{valor_bilhoes_usd[i]:.1f}\".replace('.', ','), \"bilhões\")"
+    "    print(f\"{i + 1}º lugar: {paises_destino[i]} - US$ {valor_bilhoes_usd[i]:.1f} bilhões\")"
    ]
   }
  ],
