--- a/bootcamp/day 02/exercises/Fabio/exercise.ipynb
+++ b/bootcamp/day 02/exercises/Fabio/exercise.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5e02f661",
    "metadata": {},
    "source": [
     "# Aspectos Nativos de Python - Parte 1"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "539369e5",
    "metadata": {},
    "source": [
     "## Investigue e comente o output dos códigos abaixo, antes de rodar as células:"
@@ -19,7 +17,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec74e961",
    "metadata": {
     "scrolled": false
    },
@@ -31,7 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38e2d229",
    "metadata": {
     "scrolled": false
    },
@@ -43,7 +39,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9e071a5",
    "metadata": {
     "scrolled": true
    },
@@ -55,7 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "352481b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +69,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41d07ff3",
    "metadata": {
     "scrolled": true
    },
@@ -90,7 +83,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e824320b",
    "metadata": {
     "scrolled": true
    },
@@ -104,7 +96,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffec4ebc",
    "metadata": {},
    "source": [
     "## *For* e *while*"
@@ -112,7 +103,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbcbc257",
    "metadata": {},
    "source": [
     "Crie código que retorne todos os números de 1 e 100 divisíveis por 7 usando *for loop* e, em seguida, usando *while*."
@@ -121,7 +111,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91d66ff9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -129,37 +118,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ca64523",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6773508b",
    "metadata": {},
    "source": [
-    "Crie um código que reproduza o padrão de números a seguir (ignore os caracteres #).  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dafc397d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 5 4 3 2 1 0 \n",
-    "# 4 3 2 1 0 \n",
-    "# 3 2 1 0\n",
-    "# 2 1 0\n",
-    "# 1 0\n",
-    "# 0"
+    "Crie um código que reproduza o padrão de números a seguir."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5f24bc24",
+   "metadata": {},
+   "source": [
+    "5 4 3 2 1 0 <br>\n",
+    "4 3 2 1 0 <br>\n",
+    "3 2 1 0 <br>\n",
+    "2 1 0 <br>\n",
+    "1 0 <br>\n",
+    "0 <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "*dica*: lembre-se que você pode usar um *for loop* dentro de um *for loop*. \n",
@@ -169,34 +152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "0988bed6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 4 3 2 1 0 \n",
-      "4 3 2 1 0 \n",
-      "3 2 1 0 \n",
-      "2 1 0 \n",
-      "1 0 \n",
-      "0 \n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(5, -1, -1):\n",
-    "    #print(i)\n",
-    "    for j in range(i, -1, -1):\n",
-    "        print(j, end = \" \")\n",
-    "    print('')"
-   ]
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4901f832",
    "metadata": {},
    "source": [
     "## Explorando as estatísticas brasileiras de comércio exterior"
@@ -204,7 +168,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5c54090",
    "metadata": {},
    "source": [
     "A ferramenta ComexStat (http://comexstat.mdic.gov.br/pt/geral) permite a criação de consultas aos dados de comércio exterior em diversos níveis de detalhamento. Podemos, por exemplo, checar rapidamente os principais destinos das exportações brasileiras. "
@@ -212,8 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5d2f33ab",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,41 +186,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "301e494d",
    "metadata": {},
    "source": [
     "Vamos escrever um ranking dos principais destinos das exportações brasileiras em 2022. Crie um código que retorne, para cada país da lista, a expressão \"[posição] lugar: [país] - US$ [valor] bilhões\", usando uma casa decimal de precisão. \n",
     "\n",
-    "Exemplo: \"1º lugar: China - US$ 89,4 bilhões\"."
+    "Exemplo: \"1º lugar: China - US$ 89.4 bilhões\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "10368cb2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 lugar: China -  89,4 bilhões\n",
-      "2 lugar: Estados Unidos -  37,4 bilhões\n",
-      "3 lugar: Argentina -  15,3 bilhões\n",
-      "4 lugar: Países Baixos (Holanda) -  11,9 bilhões\n",
-      "5 lugar: Espanha -  9,7 bilhões\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(len(paises_destino)):\n",
-    "    print(f'{i + 1} lugar: {paises_destino[i]} - ', f'{valor_bilhoes_usd[i]:.1f}'.replace('.', ','), 'bilhões')"
-   ]
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
