--- a/bootcamp/day 02/exercises/Fabio/exercise.ipynb
+++ b/bootcamp/day 02/exercises/Fabio/exercise.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "caeed757",
    "metadata": {},
    "source": [
     "# Aspectos Nativos de Python - Parte 1"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c1fd6033",
    "metadata": {},
    "source": [
     "## Investigue e comente o output dos códigos abaixo, antes de rodar as células:"
@@ -17,6 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3bd2f3bc",
    "metadata": {
     "scrolled": false
    },
@@ -28,6 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "86e89f62",
    "metadata": {
     "scrolled": false
    },
@@ -39,6 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "60e95fb6",
    "metadata": {
     "scrolled": true
    },
@@ -50,6 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "58b93f3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,6 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "241d59ed",
    "metadata": {
     "scrolled": true
    },
@@ -83,6 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ad0f8ff7",
    "metadata": {
     "scrolled": true
    },
@@ -96,6 +104,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c50074ec",
    "metadata": {},
    "source": [
     "## *For* e *while*"
@@ -103,6 +112,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "347535ee",
    "metadata": {},
    "source": [
     "Crie código que retorne todos os números de 1 e 100 divisíveis por 7 usando *for loop* e, em seguida, usando *while*."
@@ -111,6 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2540dd72",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -118,12 +129,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "74bbe06b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "5f969cbc",
    "metadata": {},
    "source": [
     "Crie um código que reproduza o padrão de números a seguir."
@@ -131,6 +144,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "24972f21",
    "metadata": {},
    "source": [
     "5 4 3 2 1 0 <br>\n",
@@ -143,6 +157,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "91674e8b",
    "metadata": {},
    "source": [
     "*dica*: lembre-se que você pode usar um *for loop* dentro de um *for loop*. \n",
@@ -153,6 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c2c04abb",
    "metadata": {
     "scrolled": true
    },
@@ -161,6 +177,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "25618398",
    "metadata": {},
    "source": [
     "## Explorando as estatísticas brasileiras de comércio exterior"
@@ -168,6 +185,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8484c329",
    "metadata": {},
    "source": [
     "A ferramenta ComexStat (http://comexstat.mdic.gov.br/pt/geral) permite a criação de consultas aos dados de comércio exterior em diversos níveis de detalhamento. Podemos, por exemplo, checar rapidamente os principais destinos das exportações brasileiras. "
@@ -176,6 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c20e5957",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,6 +205,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "34d4887d",
    "metadata": {},
    "source": [
     "Vamos escrever um ranking dos principais destinos das exportações brasileiras em 2022. Crie um código que retorne, para cada país da lista, a expressão \"[posição] lugar: [país] - US$ [valor] bilhões\", usando uma casa decimal de precisão. \n",
@@ -196,6 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "78ea7a4f",
    "metadata": {
     "scrolled": true
    },
@@ -205,7 +226,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
