--- a/bootcamp/day 03/exercises/Bruno/answer_Bruno.ipynb
+++ b/bootcamp/day 03/exercises/Bruno/answer_Bruno.ipynb
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 3,
    "id": "8ae95cbd",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
     "    \n",
     "    mapa = { key: value for key, value in zip(letras_maiusculas, letras_maiusculas[::-1])}\n",
     "    mapa.update({ key: value for key, value in zip(letras_minusculas, letras_minusculas[::-1])})\n",
-    "    return ''.join([mapa.get(letra,letra) for letra in palavra])\n",
+    "    return ''.join([mapa.get(letra,letra) for letra in texto])\n",
     "\n",
     "mensagem = 'Vamos Programar, Pessoal!'\n",
     "print(cifraTexto(mensagem))\n"
