--- a/bootcamp/day 04/exercises/Ricardo/Exercicios_Ricardo_aula4.ipynb
+++ b/bootcamp/day 04/exercises/Ricardo/Exercicios_Ricardo_aula4.ipynb
@@ -64,6 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import requests\n",
+    "\n",
     "def read_api(url, params=None):\n",
     "    response = requests.get(url, params=params)\n",
     "    \n",
