--- a/bootcamp/day 05/exercises/Helio/exercise.ipynb
+++ b/bootcamp/day 05/exercises/Helio/exercise.ipynb
@@ -137,9 +137,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "enap",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "enap"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -151,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   },
   "toc": {
    "base_numbering": 1,
