--- a/bootcamp/day 04/exercises/Fabio/04_fabio_answer.ipynb
+++ b/bootcamp/day 04/exercises/Fabio/04_fabio_answer.ipynb
@@ -24,14 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f01513dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "url_base = \"https://balanca.economia.gov.br/balanca/bd/comexstat-bd/ncm/\"\n",
-    "\n",
     "def cria_url(fluxo, ano):\n",
+    "    url_base = \"https://balanca.economia.gov.br/balanca/bd/comexstat-bd/ncm/\"\n",
     "    return f\"{url_base}{fluxo.upper()}_{str(ano)}.csv\""
    ]
   },
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4dc1b8b9",
    "metadata": {},
    "outputs": [],
@@ -184,27 +183,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "92f2761e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'url' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 27\u001b[0m\n\u001b[0;32m     23\u001b[0m     session\u001b[38;5;241m.\u001b[39mmount(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://\u001b[39m\u001b[38;5;124m'\u001b[39m, CustomHttpAdapter(ctx))\n\u001b[0;32m     24\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m session\n\u001b[1;32m---> 27\u001b[0m response \u001b[38;5;241m=\u001b[39m get_legacy_session()\u001b[38;5;241m.\u001b[39mget(url)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'url' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "workaround para contornar a exceção: \\\n",
+    "    SSLError: [SSL: UNSAFE_LEGACY_RENEGOTIATION_DISABLED] \\\n",
+    "    unsafe legacy renegotiation disabled (_ssl.c:997)\n",
+    "\n",
+    "é possível considerando que estamos tratando apenas de dados públicos\n",
+    "\"\"\"\n",
+    "\n",
+    "import requests, urllib3, ssl\n",
+    "\n",
+    "class CustomHttpAdapter (requests.adapters.HTTPAdapter):\n",
+    "    def __init__(self, ssl_context=None, **kwargs):\n",
+    "        self.ssl_context = ssl_context\n",
+    "        super().__init__(**kwargs)\n",
+    "    def init_poolmanager(self, connections, maxsize, block=False):\n",
+    "        self.poolmanager = urllib3.poolmanager.PoolManager(\n",
+    "            num_pools=connections, maxsize=maxsize,\n",
+    "            block=block, ssl_context=self.ssl_context)\n",
+    "def get_legacy_session():\n",
+    "    ctx = ssl.create_default_context(ssl.Purpose.SERVER_AUTH)\n",
+    "    ctx.options |= 0x4  # OP_LEGACY_SERVER_CONNECT\n",
+    "    session = requests.session()\n",
+    "    session.mount('https://', CustomHttpAdapter(ctx))\n",
+    "    return session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "b2f5bdca",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "estados = requests.get(\"https://servicodados.ibge.gov.br/api/v1/localidades/estados\").json()\n",
+    "estados = get_legacy_session().get(\"https://servicodados.ibge.gov.br/api/v1/localidades/estados\").json()\n",
     "codigo_estado = {str(i.get(\"id\")): i.get(\"nome\") for i in estados}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1a406493",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "non-default argument follows default argument (3996331842.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[10], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    def cria_ranking_nome_estado(nome, metrica = \"frequencia\", codigo_estado):\u001b[0m\n\u001b[1;37m                                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m non-default argument follows default argument\n"
+     ]
+    }
+   ],
    "source": [
-    "def cria_ranking_nome_estado(nome, metrica = \"frequencia\"):\n",
+    "def cria_ranking_nome_estado(nome, metrica = \"frequencia\", codigo_estado):\n",
     "    nome_query = f\"https://servicodados.ibge.gov.br/api/v2/censos/nomes/{nome}?groupBy=UF\"\n",
-    "    resp = requests.get(nome_query).json()\n",
+    "    resp = get_legacy_session().get(nome_query).json()\n",
     "    ranking = {codigo_estado[uf.get(\"localidade\")]: uf.get(\"res\")[0].get(metrica) \n",
     "               for uf in resp}\n",
     "    \n",
@@ -228,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
