--- a/bootcamp/day 04/exercises/Fabio/04_fabio_answer.ipynb
+++ b/bootcamp/day 04/exercises/Fabio/04_fabio_answer.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f01513dc",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4dc1b8b9",
    "metadata": {},
    "outputs": [],
@@ -183,22 +183,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "92f2761e",
+   "execution_count": null,
+   "id": "2d55ded7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'url' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 27\u001b[0m\n\u001b[0;32m     23\u001b[0m     session\u001b[38;5;241m.\u001b[39mmount(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://\u001b[39m\u001b[38;5;124m'\u001b[39m, CustomHttpAdapter(ctx))\n\u001b[0;32m     24\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m session\n\u001b[1;32m---> 27\u001b[0m response \u001b[38;5;241m=\u001b[39m get_legacy_session()\u001b[38;5;241m.\u001b[39mget(url)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'url' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "workaround para contornar a exceção: \\\n",
@@ -228,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b2f5bdca",
    "metadata": {
     "scrolled": true
@@ -236,26 +224,17 @@
    "outputs": [],
    "source": [
     "estados = get_legacy_session().get(\"https://servicodados.ibge.gov.br/api/v1/localidades/estados\").json()\n",
-    "codigo_estado = {str(i.get(\"id\")): i.get(\"nome\") for i in estados}"
+    "codigos_estados = {str(i.get(\"id\")): i.get(\"nome\") for i in estados}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1a406493",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "non-default argument follows default argument (3996331842.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[10], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    def cria_ranking_nome_estado(nome, metrica = \"frequencia\", codigo_estado):\u001b[0m\n\u001b[1;37m                                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m non-default argument follows default argument\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def cria_ranking_nome_estado(nome, metrica = \"frequencia\", codigo_estado):\n",
+    "def cria_ranking_nome_estado(nome, metrica = \"frequencia\", codigo_estado = codigos_estados):\n",
     "    nome_query = f\"https://servicodados.ibge.gov.br/api/v2/censos/nomes/{nome}?groupBy=UF\"\n",
     "    resp = get_legacy_session().get(nome_query).json()\n",
     "    ranking = {codigo_estado[uf.get(\"localidade\")]: uf.get(\"res\")[0].get(metrica) \n",
