--- a/bootcamp/day 06/exercises/Ricardo/Solucao_Ricardo_aula6.ipynb
+++ b/bootcamp/day 06/exercises/Ricardo/Solucao_Ricardo_aula6.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "56b95180-5879-48be-b5cd-f130017f739c",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "id": "5c7c8db3-e128-44e1-a6b3-012c560a3e0a",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "id": "0fc0008d-e5a4-4b76-bcad-ceeadb578aef",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "       ['Ministério do Planejamento e Orçamento', '514']], dtype='<U76')"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,12 +112,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c24aa543-f031-4e6f-8eaa-a1c802b7b2e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['Ministério da Saúde', '44762']], dtype='<U76')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "busca_ms = (matriz[:,0] == 'Ministério da Saúde')\n",
+    "busca_ms = np.char.find(matriz[:,0], 'Saúde') >= 0\n",
     "matriz[busca_ms]"
    ]
   },
@@ -131,12 +142,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3e275299-9c1b-44f5-942b-a013ae15634d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['Ministério do Planejamento e Orçamento', '12345'],\n",
+       "       ['Ministério do Planejamento e Orçamento', '514']], dtype='<U76')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "busca_mp = (matriz[:,0] == 'Ministério do Planejamento e Orçamento')\n",
+    "busca_mp = np.char.find(matriz[:,0], 'Planejamento') >= 0\n",
     "matriz[busca_mp]"
    ]
   },
@@ -150,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "854391c9",
    "metadata": {},
    "outputs": [
@@ -161,13 +184,13 @@
        "      dtype='<U76')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "busca_mj = (matriz[:,0] == 'Ministério da Justiça e Segurança Pública')\n",
+    "busca_mj = np.char.find(matriz[:,0], 'Justiça') >= 0\n",
     "matriz[busca_mj]"
    ]
   },
@@ -181,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "id": "572741d1-dbf1-4ec7-a080-4a9f9b428969",
    "metadata": {},
    "outputs": [],
@@ -191,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "id": "514edafd-7ed3-40f1-bc38-a34961325602",
    "metadata": {},
    "outputs": [
@@ -201,7 +224,7 @@
        "3"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,11 +244,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "defd41c1-7108-4bcd-b2f5-f178d3bef6fd",
+   "id": "1dcb8b1d-a10b-4428-bb92-1234deb9bf0b",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "defd41c1-7108-4bcd-b2f5-f178d3bef6fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "998732"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "lista_de_ministerios = ['ministério' in orgao.lower() for orgao in matriz[:,0]]\n",
+    "lista_de_ministerios = np.char.find(matriz[:,0], 'Ministério') >= 0\n",
     "np.sum(matriz[lista_de_ministerios][:,1].astype('int'))"
    ]
   },
@@ -239,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 10,
    "id": "3c3d522c-3054-4b77-8d5e-ea10df0ab5ec",
    "metadata": {},
    "outputs": [],
@@ -249,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 11,
    "id": "6498799e-d94c-42ce-b131-87fab4980a1f",
    "metadata": {},
    "outputs": [
@@ -302,7 +344,7 @@
        "      dtype='<U76')"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 12,
    "id": "2eee9500-3040-4149-8b5c-46178e32c751",
    "metadata": {},
    "outputs": [
@@ -330,7 +372,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3k/5x2j3hkx6x3f717k3344mgpm0000gn/T/ipykernel_41230/3654747271.py:4: RuntimeWarning: divide by zero encountered in divide\n",
+      "/var/folders/3k/5x2j3hkx6x3f717k3344mgpm0000gn/T/ipykernel_64831/3654747271.py:4: RuntimeWarning: divide by zero encountered in divide\n",
       "  coluna_da_media_da_folha_de_pagamento = coluna_da_folha_de_pagamento / coluna_do_n_de_servidores\n"
      ]
     },
@@ -382,7 +424,7 @@
        "       ['Ministério do Planejamento e Orçamento', '0.0']], dtype='<U76')"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "id": "524a8d97",
    "metadata": {},
    "outputs": [
@@ -426,7 +468,7 @@
        "       '0.0', '0.0', '0.0'], dtype='<U76')"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 14,
    "id": "5be9b0a0",
    "metadata": {},
    "outputs": [
@@ -460,7 +502,7 @@
        "       False, False, False, False, False, False])"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 15,
    "id": "2f803773",
    "metadata": {},
    "outputs": [
@@ -531,7 +573,7 @@
        "       ['Ministério do Planejamento e Orçamento', '0.0']], dtype='<U76')"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 16,
    "id": "453bada2",
    "metadata": {},
    "outputs": [
@@ -561,7 +603,7 @@
        "(33, 2)"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 17,
    "id": "8369ee6a-68a2-4650-b2a8-d07051d8f112",
    "metadata": {},
    "outputs": [
@@ -582,7 +624,7 @@
        "(32, 2)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,14 +632,6 @@
    "source": [
     "ministerios_restantes.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f132abe8-d9ee-4abd-a3f5-d9441ee01cab",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
