--- a/bootcamp/day 06/Manipulação de Dados em Alto Desempenho.ipynb
+++ b/bootcamp/day 06/Manipulação de Dados em Alto Desempenho.ipynb
@@ -2674,7 +2674,7 @@
     "    filepath = os.path.join(build_path(), filename)\n",
     "    \n",
     "    covid_infections_and_deaths_data = []\n",
-    "    with open(filepath) as csvfile:\n",
+    "    with open(filepath, encoding='utf-8') as csvfile:\n",
     "        csvfile_iterator = csv.reader(csvfile)\n",
     "        header = next(csvfile_iterator)[0].split(';')\n",
     "        idx_municipio, idx_casos, idx_obitos = \\\n",
@@ -2756,8 +2756,8 @@
      "text": [
       "Com Python Puro;\n",
       "Taxa de Letalidade da Covid no Brasil: 1.86%.\n",
-      "CPU times: user 390 ms, sys: 2.48 ms, total: 392 ms\n",
-      "Wall time: 391 ms\n"
+      "CPU times: user 370 ms, sys: 8.95 ms, total: 379 ms\n",
+      "Wall time: 398 ms\n"
      ]
     }
    ],
@@ -2787,8 +2787,8 @@
      "text": [
       "Com NumPy;\n",
       "Taxa de Letalidade da Covid no Brasil: 1.86%.\n",
-      "CPU times: user 40.8 ms, sys: 5.6 ms, total: 46.4 ms\n",
-      "Wall time: 45.5 ms\n"
+      "CPU times: user 48.1 ms, sys: 4.61 ms, total: 52.7 ms\n",
+      "Wall time: 52.3 ms\n"
      ]
     }
    ],
@@ -2839,9 +2839,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução em python puro: 0.39 segundos.\n",
-      "Tempo de execução em numpy: 0.038 segundos.\n",
-      "Observe que a mesma manipulação de dados em NumPy foi 9 vezes mais rápido do que no python nativo.\n"
+      "Tempo de execução em python puro: 0.35 segundos.\n",
+      "Tempo de execução em numpy: 0.044 segundos.\n",
+      "Observe que a mesma manipulação de dados em NumPy foi 7 vezes mais rápido do que no python nativo.\n"
      ]
     }
    ],
@@ -2880,7 +2880,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   },
   "toc": {
    "base_numbering": 1,
