--- a/bootcamp/day 06/notebooks_aula/numpy_slicing_and_axis.ipynb
+++ b/bootcamp/day 06/notebooks_aula/numpy_slicing_and_axis.ipynb
@@ -13,12 +13,12 @@
    "id": "1e1aa644-ad40-4e18-b269-5491660fd9ec",
    "metadata": {},
    "source": [
-    "## Daiana e Monica"
+    "## Daiana, Monica e Michela"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "55a9470a-1506-4df5-ac48-c65838419bb2",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "57a7c344-d2fc-4c3e-8b1d-f3b204ccbf6b",
    "metadata": {},
    "outputs": [],
@@ -122,27 +122,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "f6c64723-29c2-4a2b-8a9c-8f0578ba0b94",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ 1,  2,  3],\n",
-       "        [ 4,  5,  6],\n",
-       "        [ 7,  8,  9]],\n",
+       "array([[[  1, 200,   3],\n",
+       "        [  4,   5,   6],\n",
+       "        [  7,   8,   9]],\n",
        "\n",
-       "       [[10, 11, 12],\n",
-       "        [13, 14, 15],\n",
-       "        [16, 17, 18]],\n",
+       "       [[ 10,  11,  12],\n",
+       "        [ 13,  14,  15],\n",
+       "        [ 16,  17,  18]],\n",
        "\n",
-       "       [[19, 20, 21],\n",
-       "        [22, 23, 24],\n",
-       "        [25, 26, 27]]])"
+       "       [[ 19,  20,  21],\n",
+       "        [ 22,  23,  24],\n",
+       "        [ 25,  26,  27]]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
+   "id": "542b2d07-7b90-41b0-b7ed-aaaa35c57e27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = lista_3d[:,:,1:3].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "fd02f14e-e9b3-4270-80ad-bde6bdbdf7af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[100000,      3],\n",
+       "        [     5,      6],\n",
+       "        [     8,      9]],\n",
+       "\n",
+       "       [[    11,     12],\n",
+       "        [    14,     15],\n",
+       "        [    17,     18]],\n",
+       "\n",
+       "       [[    20,     21],\n",
+       "        [    23,     24],\n",
+       "        [    26,     27]]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "88d58939-59f4-44d5-bc06-104f4e5afe4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b[0,0,0] = 100_000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "4e553555-2163-42d3-af39-a8c52ce04851",
    "metadata": {},
    "outputs": [
@@ -165,35 +216,45 @@
        "       [60, 69, 78]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lista_3d.sum(axis=2) # profundidade, coluna, linha"
+    "lista_3d.sum(axis=2) #profundidade, coluna, linha"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "542b2d07-7b90-41b0-b7ed-aaaa35c57e27",
+   "execution_count": 20,
+   "id": "1bf79990-97a0-4cab-acb6-2e614672ca04",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([19, 20])"
+       "array([[204,  15,  24],\n",
+       "       [ 33,  42,  51],\n",
+       "       [ 60,  69,  78]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lista_3d[2,0,0:2] #z (profundidade), x (linha), y (coluna)"
+    "lista_3d.sum(axis=2) #profundidade, coluna, linha"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f70d1db4-b04e-49fe-a175-3cf48e2c5539",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -212,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
