gathering pieces extracted from all classes

--- a/bootcamp/day 03/Aspectos Nativos de Python - Parte 02.ipynb
+++ b/bootcamp/day 03/Aspectos Nativos de Python - Parte 02.ipynb
@@ -30,9 +30,11 @@
    "cell_type": "markdown",
    "id": "7922cb28-d8e4-44a8-a5bc-f6cd89413b4e",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "-"
-    }
+     "slide_type": "slide"
+    },
+    "tags": []
    },
    "source": [
     "<ul>\n",
@@ -955,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "f6cee4a8-c18c-4e5f-b026-984eaf8118a5",
    "metadata": {
     "slideshow": {
@@ -969,7 +971,7 @@
        "['Brasil', 'Russia', 'India', 'China', 'Africa do Sul']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,27 +1016,6 @@
    ],
    "source": [
     "BRICS[0] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "0a6eb22b-2a15-48bd-a005-873f60b6eb9f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1331832139776"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "id(BRICS)"
    ]
   },
   {
@@ -3905,7 +3886,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x1052f10c0>"
+       "<IPython.lib.display.YouTubeVideo at 0x107d26210>"
       ]
      },
      "execution_count": 114,
@@ -4981,7 +4962,7 @@
     {
      "data": {
       "text/plain": [
-       "<generator object squares_generator at 0x1057bc3c0>"
+       "<generator object squares_generator at 0x107d1f1d0>"
       ]
      },
      "execution_count": 143,
@@ -5583,6 +5564,14 @@
    "source": [
     "converte_para_float((1,2))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaac50e7-5402-4c7d-b251-02e33d46c5ce",
+   "metadata": {},
+   "source": [
+    "<font size=7><center><code>Executem todo este caderno...</code></center></font>"
+   ]
   }
  ],
  "metadata": {
@@ -5602,7 +5591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.2"
   },
   "toc": {
    "base_numbering": 1,
