--- a/bootcamp/day 06/Análise de Dados em Alto Desempenho - Parte 01.ipynb
+++ b/bootcamp/day 06/Análise de Dados em Alto Desempenho - Parte 01.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "id": "21b7143c-702e-46aa-8a19-9d7a194673c2",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
     "# Análise de Dados 🕵🏽 🎲 em Alto Desempenho 🚀 🧞‍♂️"
@@ -90,7 +92,17 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.11 -m pip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install --upgrade pandas --quiet"
    ]
@@ -1083,6 +1095,14 @@
    "source": [
     "s2 = s2.drop('California')\n",
     "s2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d02cdab1-14ca-4ee4-8c6e-0035a0351cf9",
+   "metadata": {},
+   "source": [
+    "<font size=7><center><code>Executem todo este caderno...</code></center></font>"
    ]
   }
  ],
