--- a/bootcamp/day 06/Manipulação de Dados em Alto Desempenho.ipynb
+++ b/bootcamp/day 06/Manipulação de Dados em Alto Desempenho.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "id": "91aa5ee1-a52d-48eb-bdf7-4b2b75909587",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -81,7 +82,17 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.11 -m pip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install --upgrade numpy --quiet"
    ]
@@ -2756,8 +2767,8 @@
      "text": [
       "Com Python Puro;\n",
       "Taxa de Letalidade da Covid no Brasil: 1.86%.\n",
-      "CPU times: user 370 ms, sys: 8.95 ms, total: 379 ms\n",
-      "Wall time: 398 ms\n"
+      "CPU times: user 284 ms, sys: 4.12 ms, total: 288 ms\n",
+      "Wall time: 287 ms\n"
      ]
     }
    ],
@@ -2787,8 +2798,8 @@
      "text": [
       "Com NumPy;\n",
       "Taxa de Letalidade da Covid no Brasil: 1.86%.\n",
-      "CPU times: user 48.1 ms, sys: 4.61 ms, total: 52.7 ms\n",
-      "Wall time: 52.3 ms\n"
+      "CPU times: user 40.9 ms, sys: 4.84 ms, total: 45.7 ms\n",
+      "Wall time: 45.1 ms\n"
      ]
     }
    ],
@@ -2839,9 +2850,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução em python puro: 0.35 segundos.\n",
-      "Tempo de execução em numpy: 0.044 segundos.\n",
-      "Observe que a mesma manipulação de dados em NumPy foi 7 vezes mais rápido do que no python nativo.\n"
+      "Tempo de execução em python puro: 0.28 segundos.\n",
+      "Tempo de execução em numpy: 0.038 segundos.\n",
+      "Observe que a mesma manipulação de dados em NumPy foi 6 vezes mais rápido do que no python nativo.\n"
      ]
     }
    ],
@@ -2860,6 +2871,14 @@
     "      f'{numpy_timing:.2} segundos.')\n",
     "print('Observe que a mesma manipulação de dados em NumPy foi ' +\n",
     "      f'{faster-1} vezes mais rápido do que no python nativo.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69c2ebcd-f4db-4791-b8c7-c0234a48e4e7",
+   "metadata": {},
+   "source": [
+    "<font size=7><center><code>Executem todo este caderno...</code></center></font>"
    ]
   }
  ],
