--- a/bootcamp/day 02/Aspectos Nativos de Python - Parte 01.ipynb
+++ b/bootcamp/day 02/Aspectos Nativos de Python - Parte 01.ipynb
@@ -5063,6 +5063,20 @@
     "for i in range(20, 0, -1):\n",
     "    print(i)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ca96e0f-a6ba-40d4-98f1-6767df7cd0b3",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "<font size=7><center><code>Executem todo este caderno...</code></center></font>"
+   ]
   }
  ],
  "metadata": {
@@ -5082,7 +5096,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   },
   "toc": {
    "base_numbering": 1,
