--- a/bootcamp/day 09/exercises/Bruno/exercise.ipynb
+++ b/bootcamp/day 09/exercises/Bruno/exercise.ipynb
@@ -456,7 +456,7 @@
     "tags": []
    },
    "source": [
-    "#### Prepração dos Dados"
+    "#### Preparação dos Dados"
    ]
   },
   {
@@ -579,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
