bugfix: c'odigo carga de dados

--- a/bootcamp/day 09/exercises/Bruno/exercise.ipynb
+++ b/bootcamp/day 09/exercises/Bruno/exercise.ipynb
@@ -438,7 +438,10 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df_populacao = pd.read_csv('./data/populacao_municipios.csv',sep=';')\n",
+    "df_populacao.head()"
+   ]
   },
   {
    "cell_type": "markdown",
